--- a/public/config.json
+++ b/public/config.json
@@ -1,5 +1,5 @@
 {
-	"key": "<YOUR APPLICATION EXTENSION KEY HERE>",
+	"key": "21141aac-c539-4f97-87d4-cc50ea703096",
 	"metaData": {
 		"icon": "images/icon.png",
 		"iconSmall": "images/icon_small.png"
@@ -13,51 +13,32 @@
 	},
 	"workflowApiVersion": "1.1",
 	"configurationArguments": {
-		"applicationExtensionKey": "<YOUR APPLICATION EXTENSION KEY HERE>",
+		"applicationExtensionKey": "21141aac-c539-4f97-87d4-cc50ea703096",
 		"save": {
-			"url": "https://<URL OF THE SERVER RUNNING THE BACKEND>/activity/save",
+			"url": "https://mc.s7.exacttarget.com/activity/save",
 			"verb": "POST",
 			"body": "",
-			"useJwt": true,
-			"customerKey": "<EXTERNAL KEY OF THE SALT KEY FOR THE JWT>"
+			"useJwt": true
+			
 		},
 		"publish": {
-			"url": "https://<URL OF THE SERVER RUNNING THE BACKEND>/activity/publish",
+			"url": "https://mc.s7.exacttarget.com/activity/publish",
 			"verb": "POST",
 			"body": "",
-			"useJwt": true,
-			"customerKey": "<EXTERNAL KEY OF THE SALT KEY FOR THE JWT>"
+			"useJwt": true
 		},
 		"validate": {
-			"url": "https://<URL OF THE SERVER RUNNING THE BACKEND>/activity/validate",
+			"url": "https://mc.s7.exacttarget.com/activity/validate",
 			"verb": "POST",
 			"body": "",
-			"useJwt": true,
-			"customerKey": "<EXTERNAL KEY OF THE SALT KEY FOR THE JWT>"
+			"useJwt": true
 		}
 	},
 	"wizardSteps": [
 		{"key": "eventdefinitionkey", "label": "Event Definition Key"},
 		{"key": "idselection", "label": "ID Selection"}
 	],
-	"outcomes": [
-		{
-			"arguments": {
-				"branchResult": "<KEY FOR PATH 1>"
-			},
-			"metaData": {
-				"label": "<LABEL FOR PATH 1>"
-			}
-		},
-		{
-			"arguments": {
-				"branchResult": "<KEY FOR PATH 2>"
-			},
-			"metaData": {
-				"label": "<LABEL FOR PATH 2>"
-			}
-		}
-	],
+	
 	"userInterfaces": {
 		"runningModal": {
 			"url": "runningModal.html"
@@ -70,18 +51,17 @@
 		"execute": {
 			"inArguments": [],
 			"outArguments": [],
-			"url": "https://<URL OF THE SERVER RUNNING THE BACKEND>/activity/execute",
+			"url": "https://mc.s7.exacttarget.com/activity/execute",
 			"verb": "POST",
 			"body": "",
 			"header": "",
 			"format": "json",
 			"useJwt": true,
-			"customerKey": "<EXTERNAL KEY OF THE SALT KEY FOR THE JWT>",
 			"timeout": 90000
 		}
 	},
 	"edit": {
-		"url": "https://<URL OF THE SERVER RUNNING THE BACKEND>/index.html",
+		"url": "https://mc.s7.exacttarget.com/index.html",
 		"height": 200,
 		"width": 500
 	}
